...
      </View>
      <Text style={styles.bodyText}>Monitore a saúde de seus familiares por aqui!</Text>

      <PaperAuthInput
        autoCapitalize="none"
        keyboardType="email-address"
        testID="auth-email"
        label="Endereço de e-mail"
        onChangeText={onChangeEmail}
        onClear={() => onChangeEmail('')}
        value={email}
      />

      {errorMessage ? <Text style={styles.errorText}>{errorMessage}</Text> : null}

      <GradientButton disabled={isSubmitting} label={isSubmitting ? 'VERIFICANDO...' : 'CONTINUE'} onPress={onContinue} />

      <View style={styles.emailSpacer} />

      <TermsText />
    </ScrollView>
  );
...
