...
        <Text style={styles.bodyText}>
          Nós achamos uma conta vinculada a este e-mail. Por favor, insira sua
          senha.
        </Text>

        <PaperAuthInput
          testID="auth-password"
          label="Senha"
          onChangeText={onChangePassword}
          onToggleVisibility={onTogglePassword}
          passwordVisible={isPasswordVisible}
          secureTextEntry={!isPasswordVisible}
          value={password}
...
