appId: com.devsilogix.vard
---
- runFlow: open-app.yaml
- tapOn:
    id: auth-email
- eraseText: 100
- inputText: ${MAESTRO_EMAIL}
- hideKeyboard
- tapOn: "CONTINUE"
- assertVisible:
    id: auth-password
- tapOn:
    id: auth-password
- inputText: ${MAESTRO_PASSWORD}
- hideKeyboard
- tapOn: "CONTINUE"
- extendedWaitUntil:
    visible: "Últimos Alertas"
    timeout: 120000
